fix: word wrap

--- a/app/about-section/about-section.component.css
+++ b/app/about-section/about-section.component.css
@@ -1,3 +1,4 @@
 a {
     color: inherit;
+    word-break: break-all;
 }
