--- a/app/imprint-section/imprint-section.component.css
+++ b/app/imprint-section/imprint-section.component.css
@@ -4,4 +4,5 @@ p {
 
 a {
     color: inherit;
+    word-break: break-all;
 }
